style: Organize chat settings into common groups.
Organized chat settings into common groups so that specific settings can be found easier.

--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -764,3 +764,9 @@
     background: rgba(0, 0, 0, 0.6);
     padding: 10px;
 }
+
+.chat-settings-group{
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+}
