feat: implement effect outputs system (#1740)

--- a/gui/scss/core/_bootstrap-overrides.scss
+++ b/gui/scss/core/_bootstrap-overrides.scss
@@ -98,6 +98,12 @@
     border: none;
 }
 
+.well-dark {
+    margin-bottom: 0px;
+    background: #25282b;
+    border: none;
+}
+
 textarea.form-control {
     resize: vertical;
 }
