--- a/gui/scss/core/_global.scss
+++ b/gui/scss/core/_global.scss
@@ -1077,6 +1077,14 @@ body {
   cursor: pointer;
 }
 
+.clickable-icon-on-dark {
+    color: #d0d0d0;
+    cursor: pointer;
+    &:hover {
+        color: white;
+    }
+}
+
 //////
 // animations
 //////
