misc accessibility fixes

--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -14,7 +14,7 @@
     ng-style="{'width': layout.dashboardViewerList }"
   >
     <div class="viewer-list-header">
-      <span> CHAT USERS </span>
+      <span role="heading" aria-level="2"> CHAT USERS </span>
     </div>
     <div class="chat-users mt-2">
       <chat-user-category category="Moderators" role-key="mod" />
