chore: tweak viewerlist bot role to "known bots"

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -21,7 +21,7 @@
       <chat-user-category category="VIPs" role-key="vip" />
       <chat-user-category category="Viewers" role-key="viewer" />
       <chat-user-category category="Broadcaster" role-key="broadcaster" />
-      <chat-user-category category="Viewerlist Bot" role-key="viewerlistbot" />
+      <chat-user-category category="Known Bots" role-key="viewerlistbot" />
     </div>
   </div>
 
