feat: add twitch user search support & add confirmation dialogs to role removal (#1622)

--- a/src/gui/app/templates/viewers/_viewers.html
+++ b/src/gui/app/templates/viewers/_viewers.html
@@ -7,6 +7,7 @@
     </button>
     <div class="flex justify-between" style="margin-left: auto;">
         <searchbar placeholder-text="Search Firebot viewers..." query="viewerSearch" style="flex-basis: 250px"></searchbar>
+        <button ng-click="showViewerSearchModal();" class="btn btn-default" style="margin-left: 15px;"><i class="far fa-search"></i> Search Twitch</button>
     </div>
 </div>
 
