fix: tabbed UI height

--- a/src/gui/app/templates/chat/_commands.html
+++ b/src/gui/app/templates/chat/_commands.html
@@ -7,7 +7,7 @@
     flex-direction: column;
   "
 >
-  <div class="fb-commands-tab-wrapper">
+  <div class="fb-tab-wrapper">
     <ul class="nav nav-tabs fb-tabs">
       <li
         role="presentation"
