--- a/src/gui/app/templates/_timers.html
+++ b/src/gui/app/templates/_timers.html
@@ -26,7 +26,7 @@
     </ul>
   </div>
   
-  <div style="overflow-y: scroll;">
+  <div style="overflow-y: scroll; height: 100%;">
     <firebot-item-table
       ng-if="activeTimerTab === 0"
       items="timerService.timers"
