--- a/src/resources/overlay/index.ejs
+++ b/src/resources/overlay/index.ejs
@@ -44,6 +44,13 @@
     <% } %>
 
     <script>
+        const queryParams = new URLSearchParams(window.location.search);
+        if (queryParams.has("instance") && queryParams.get("instance") !== "") {
+            document.title = `Firebot Overlay (${queryParams.get("instance")})`;
+        } else {
+            document.title = "Firebot Overlay (Default)";
+        }
+
         <% for(let event of events) {%>
             firebotOverlay.on('<%-event.name%>', <%-event.onOverlayEvent%>);
         <% } %>
