--- a/src/gui/app/templates/_moderation.html
+++ b/src/gui/app/templates/_moderation.html
@@ -122,7 +122,7 @@
           <div style="display: block;width: 100%;" class="my-8" ng-show="cms.chatModerationData.settings.urlModeration.enabled">
             <div class="my-8">
               <div class="mb-4 text-2xl font-semibold">
-                Exempt Roles <tooltip text="'These roles are exempt from the url moderation.'" />
+                Exempt Roles <tooltip text="'These roles are exempt from URL moderation.'" />
               </div>
               <exempt-roles model="cms.chatModerationData.settings.urlModeration.exemptRoles" on-update="cms.saveChatModerationSettings()"></exempt-roles>
             </div>
@@ -146,7 +146,7 @@
               class="mt-6"
               ng-show="cms.chatModerationData.settings.urlModeration.enabled && cms.chatModerationData.settings.urlModeration.viewTime.enabled"
             >
-              <div class="muted mb-4 ml-6">All viewers with a higher view time will be exempt from url moderation.</div>
+              <div class="muted mb-4 ml-6">All viewers with a higher view time will be exempt from URL moderation.</div>
               <firebot-input
                 input-title="View time in hours"
                 placeholder-text="Enter amount of hours"
@@ -162,7 +162,7 @@
               class="mt-8"
               ng-show="cms.chatModerationData.settings.urlModeration.enabled"
             >
-            <div class="muted">The chat message shown when a message containing a url is moderated (leave empty for no message).</div>
+            <div class="muted">The chat message shown when a message containing a URL is moderated (leave empty for no message).</div>
               <div class="muted mb-4 font-extrabold">
                 Variables: {userName}<span ng-show="cms.chatModerationData.settings.urlModeration.viewTime.enabled">, {viewTime}</span>
               </div>
