feat(auth): improve ux for login modal and dcf screen + send desktop notification on successful twitch auth

--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -213,6 +213,9 @@ textarea.form-control {
 
 .btn-link {
     color: #12d0ff;
+    &:hover, &:focus {
+        color: #11add4;
+    }
 }
 
 // Misc
