--- a/src/resources/overlay/index.ejs
+++ b/src/resources/overlay/index.ejs
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 		<link href="css/main.css" rel='stylesheet' type='text/css'>
 
         <% for(let cssDep of dependancies.css) { %>
