--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -201,7 +201,7 @@
 
     &.isTagged {
         .chatContent {
-            font-weight: 700;
+            font-weight: 700 !important;
         }
     }
     &.isCompact {
