feat: Unicode username support in chatter list/autocomplete

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -647,6 +647,9 @@
         }
         .chat-user-name {
             color: #b381ff;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
             &:hover {
                 text-decoration: underline;
                 cursor: pointer;
