--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -895,8 +895,10 @@
     padding: 10px;
 }
 
-.chat-settings-group{
-    border-bottom: 1px solid lightgray;
-    padding-bottom: 1em;
-    margin-bottom: 1em;
+.chat-settings-header {
+    background-color: #00000040;
+    padding: 8px;
+    margin-bottom: 8px;
+    font-size: 18px;
+    font-weight: bold;
 }
