--- a/src/gui/scss/core/_controls.scss
+++ b/src/gui/scss/core/_controls.scss
@@ -829,19 +829,23 @@ table.fb-table-alt {
 .sort-tags {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    overflow: auto;
-    max-height: 45.25px;
+    flex-basis: 80%;
+    overflow: hidden;
+    max-height: 22.25px;
+
+    &.hidden-tags {
+        visibility: hidden;
+    }
 
     .sort-tag {
         display: flex;
 
         span {
-            background: $sort-tags-bg;
+            background: #808080;
             font-size: 10px;
-            line-height: 1.8;
-            border-radius: 15px 0 0 15px;
-            padding: 1px 0 1px 8px;
+            line-height: 1.9;
+            border-radius: 15px;
+            padding: 1px 8px 1px 8px;
         }
 
         button {
@@ -854,12 +858,12 @@ table.fb-table-alt {
         }
     }
 
-    .sort-tag-add {
-        border: none;
-        border-radius: 15px;
-        padding: 2px 7px 1px 7px;
-        background: $sort-tags-bg;
-        font-size: 10px;
-        line-height: 1.8;
-    }
+}
+.sort-tag-add {
+    border: none;
+    border-radius: 15px;
+    padding: 2px 7px 1px 7px;
+    background: $sort-tags-bg;
+    font-size: 10px;
+    line-height: 1.8;
 }
