rename to "rank ladders"

--- a/src/gui/app/templates/_roles-and-ranks.html
+++ b/src/gui/app/templates/_roles-and-ranks.html
@@ -94,16 +94,16 @@
     </div>
     <firebot-item-table
         ng-if="activeTab === 1"
-        items="viewerRanksService.rankTracks"
-        on-items-update="viewerRanksService.saveAllRankTracks(items)"
+        items="viewerRanksService.rankLadders"
+        on-items-update="viewerRanksService.saveAllRankLadders(items)"
         headers="rewardHeaders"
-        sort-tag-context="rank tracks"
+        sort-tag-context="rank ladders"
         orderable="true"
-        add-new-button-text="New Rank Track"
-        on-add-new-clicked="showAddOrEditRankTrackModal()"
-        context-menu-options="rankTrackMenuOptions(item)"
-        no-data-message="No rank tracks saved. You should make one! :)"
-        none-found-message="No rank tracks found."
+        add-new-button-text="New Rank Ladder"
+        on-add-new-clicked="showAddOrEditRankLadderModal()"
+        context-menu-options="rankLadderMenuOptions(item)"
+        no-data-message="No rank ladders saved. You should make one! :)"
+        none-found-message="No rank ladders found."
         search-placeholder="Search tracks"
         test-button="false"
         status-field="enabled"
