feat: Firebot item table custom filter support, command trigger default search

--- a/src/gui/app/templates/chat/_commands.html
+++ b/src/gui/app/templates/chat/_commands.html
@@ -44,6 +44,7 @@
         test-button="true"
         on-test-button-clicked="manuallyTriggerCommand(itemId)"
         status-field="active"
+        custom-filter-name="triggerSearch"
       >
         <fb-item-table-toolbar>
           <button
