fix: commands UI cutoff (#2490)

--- a/src/gui/app/templates/chat/_commands.html
+++ b/src/gui/app/templates/chat/_commands.html
@@ -26,7 +26,7 @@
     </ul>
   </div>
 
-  <div style="height: 100%">
+  <div class="pb-12" style="height: 100%">
     <div ng-if="activeCmdTab === 0" style="height: 100%">
       <firebot-item-table
         items="commandsService.getCustomCommands()"
